# idom_demo

./: README.md
202603256_car_recommend_agent/: 00_config.py  01_setup_demo_data.py  02_recommend_demo.py  README.md
20260328_car_sales_agent_app/: .gitignore  00_config.py  01_setup_demo_data.py  02_Genieスペース作成.py  03_AgentBricksナレッジアシスタント.py  04_MCPサーバー.py  05_AgentBricksマルチエージェントスーパーバイザー.py  APP_REQUIREMENTS.md  IDOM_CAR_AI_ARCHITECTURE.md  app.yaml  app.yml  demo_data_design.md  requirements.txt
20260328_car_sales_agent_app/app/backend/: .env.example  pyproject.toml  run.py
20260328_car_sales_agent_app/app/backend/app/: __init__.py  config.py  database.py  llm.py  main.py
20260328_car_sales_agent_app/app/backend/app/routers/: __init__.py  admin.py  chat.py  customers.py  recommendations.py
20260328_car_sales_agent_app/app/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
20260328_car_sales_agent_app/app/frontend/src/: App.tsx  index.css
20260328_car_sales_agent_app/app/frontend/src/api/: index.ts
20260328_car_sales_agent_app/idom_car_ai/: _metadata.py
20260328_car_sales_agent_app/idom_car_ai/__dist__/: index.html
20260328_car_sales_agent_app/idom_car_ai/__dist__/assets/: CustomerDetail-DMI2wumW.js  index-ActQgURC.css  index-DtdGDNGa.js
20260328_car_sales_agent_app/idom_car_ai/backend/: app.py  config.py  database.py  demo_data.py  llm.py  models.py
20260328_car_sales_agent_app/idom_car_ai/backend/routers/: __init__.py
20260328_car_sales_agent_app/src/idom_car_ai/__dist__/: index.html
(+25 files in other folders)
